tests/fixtures/valid/var_no_init.dub
type point = struct {
    x: int;
    y: int;
}

fun main() {
    var p: point;
    var x: int;
    p.x = 10;
    x = p.x;
}
